# kalshi-trading

./: .env.example  .gitignore  README.md  README_CONTRACTS.md  REFACTOR_NOTES.md  backtest_cme_arbitrage.py  list_kalshi_contracts.py  log.gitignore  main.py  pyproject.toml  run.sh
src/: backtest.py  kalshi_client.py  live.py  strategy.py
src/execution/: __init__.py  backtest.py  live.py
src/ingestion/: __init__.py  cme_client.py  kalshi_client.py
src/research/: __init__.py  config.py  graph_builder.py
