[project]
name = "kalshi-systematic-template"
version = "0.1.0"
description = "Trading CME x Kalshi using monthly ZQ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
kalshi = "main:main"
